# macropad-program

./: .gitignore  CONTRIBUTING.md  LICENSE  MacroPad Controller.spec  Makefile  README.md  macropad-ble.toml.example  macropad.toml.example  pyproject.toml  test.py
.github/workflows/: ci.yml
profiles/: app_state.json  default.json  profile_01.json  profile_02.json  profile_03.json  profile_04.json  profile_05.json  profile_06.json  profile_07.json  profile_08.json  profile_09.json  profile_10.json
profiles/runtime_ahk/: all_keys.ahk  key_0_2.ahk  key_0_3.ahk  key_2_3.ahk  profile_03_key_0_3_latch_hold.ahk  profile_03_latch_activate.ahk  profile_03_latch_deactivate.ahk  profile_03_latch_service.ahk  profile_03_latch_stop.ahk
profiles/runtime_python/: _app_window_media.py  all_keys.py  profile_02_key_0_0_tab_click.py  profile_02_key_0_1_tab_click.py  profile_02_key_0_2_tab_click.py  profile_03_key_0_3_latch_hold.py  toggle_opera_gx_session.py  toggle_spotify_session.py
scripts/: install_windows_app.ps1  package_windows_app.ps1  uninstall_windows_app.ps1  windows_gui_launcher.py
src/macropad/: __init__.py  board_serial.py  cli.py  config.py  gui_app.py  pygame_continuous_ui.py
src/macropad/commands/: __init__.py  operations.py
src/macropad/core/: actions.py  app_state.py  key_layout.py  oled_text.py  profile.py  step_blocks.py  volume_mixer.py  window_control.py  windows_icons.py
src/macropad/platform/: __init__.py  autostart.py  paths.py  window_effects.py
src/macropad/qt/: __init__.py  app.py  app_icon.py  constants.py  main_window.py  smooth_scroll.py  theme.py  utils.py  workspace.py
src/macropad/qt/controllers/: __init__.py  profile_store.py  runtime.py
src/macropad/qt/dialogs/: __init__.py  change_profile_dialog.py  copy_to_slots_dialog.py  key_lists.py  keyboard_picker_dialog.py  volume_mixer_dialog.py  (+1 more)
src/macropad/serial/: __init__.py  board.py  errors.py  ports.py
src/macropad_ble/: __init__.py  backoff.py  board_serial.py  cli.py  config.py  gui_app.py
src/macropad_ble.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/macropad_ble/commands/: operations.py
src/macropad_ble/desktop/: __init__.py  paths.py  single_instance.py  tray.py
src/macropad_ble/serial/: board.py  events.py
src/macropad_ble/ui/: __init__.py  actions.py  app_state.py  key_layout.py  key_names.py  key_window.py  oled_text.py  profile.py  profile_images.py  step_blocks.py  volume_overlay.py  windows_icons.py
tests/: test_app_state.py  test_backoff.py  test_cli.py  test_config.py  test_desktop.py  test_gui_app.py  test_oled_text.py  test_profile_images.py  test_profile_render.py  test_qt_app.py  test_qt_controller_page.py  test_qt_key_matrix_widget.py  test_qt_keyboard_picker_dialog.py  test_qt_runtime.py  test_qt_runtime_scripts.py  test_qt_scripts_page.py  test_qt_setup_page.py  test_qt_stats_page.py  test_qt_step_editor.py  test_qt_volume_mixer_dialog.py  test_qt_volume_overlay.py  test_serial_logic.py  test_step_blocks.py  test_system_stats.py  test_ui_actions.py  test_volume_mixer.py  test_window_control.py
(+47 files in other folders)
